--- a/picoo/public/css/index.css
+++ b/picoo/public/css/index.css
@@ -15,7 +15,7 @@ a {
 
 p {
     word-wrap: break-word;
-    font-size: 2vw;
+    font-size: 1.5vw;
 }
 
 input[type="text"] {
@@ -65,6 +65,15 @@ textarea {
     width: 20%;
     display: inline-block;
 }
+
+
+
+.dropdown {
+    margin-right: 3vw;
+    z-index: 1;
+    background-color: lightgreen;
+}
+
 
 .btn-logout {
     border: none;
@@ -140,7 +149,7 @@ textarea {
 }
 
 .card {
-    margin-right: 4vw;
+    margin-right: 3.8vw;
     margin-bottom: 10vh;
 }
 
@@ -267,3 +276,56 @@ textarea {
 
 
 
+.follow-user {
+    padding: 15vh 5vw;
+    background-color: #ddd;
+    margin-bottom: 30vh;
+}
+
+.follow-icon, .popularpage-icon {
+    width:  15vw;
+    height: 25vh;
+    margin-bottom: 10vh;
+}
+
+.follow-icon-img, .popularpage-icon-img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50vw;
+    object-fit: cover;
+    object-position: center center;
+    overflow: clip;
+}
+
+.follow-user-picture {
+    width: 10vw;
+    height: 20vh;
+    margin-right: 1vw;
+}
+
+.jc-sb {
+    justify-content: space-between;
+}
+
+
+
+.popular-pictures {
+    margin-bottom: 20vh;
+}
+
+.popular-picture {
+    margin-right: 4vw;
+    margin-bottom: 20vh;
+}
+
+.popular-users {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.popular-user {
+    margin-bottom: 20vh;
+    margin-right: 10vw;
+}
