--- a/picoo/public/css/index.css
+++ b/picoo/public/css/index.css
@@ -13,6 +13,10 @@ a {
     color: #000;
 }
 
+label {
+    font-size: 1vw;
+}
+
 p {
     word-wrap: break-word;
     font-size: 1.5vw;
@@ -26,6 +30,15 @@ input[type="text"] {
 input[type="submit"] , button {
     width: 8vw;
     font-size: 1vw;
+}
+
+input[type="file"] {
+    width: 20vw;
+    font-size: 1vw;
+}
+
+input[type="radio"] {
+    width: 5vw;
 }
 
 textarea {
@@ -61,8 +74,8 @@ textarea {
 }
 
 .header-form {
-    margin-left: 20vw;
     width: 25vw;
+    display: flex;
 }
 
 .search {
