add: flash message on default.blade.php, preview on index.blade.php, import: jQuery

--- a/picoo/public/css/index.css
+++ b/picoo/public/css/index.css
@@ -178,6 +178,19 @@ textarea {
     display: block;
 }
 
+.flex {
+    display: flex;
+}
+
+.w-25vw {
+    width: 25vw;
+}
+
+.bw {
+    word-wrap: break-word;
+}
+
+
 
 
 .search-result {
